k8s/overlays/dev/patch-api-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal-api
spec:
  template:
    spec:
      containers:
        - name: api
