k8s/overlays/dev/patch-api-image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal-api
  namespace: portal-dev
spec:
  template:
    spec:
      containers:
        - name: api
          image: portal-api:dev
          imagePullPolicy: IfNotPresent
