k8s/overlays/dev/patch-api-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal-api
  namespace: portal-dev
spec:
  replicas: 1
