k8s/overlays/dev/patch-ingress-hosts.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: { name: odoo }
spec:
  rules:
    - host: odoo.local
